# starweft

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRODUCTION_READINESS.md  README.md  SECURITY.md  package-lock.json  rust-toolchain.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: release-readiness.md
.github/workflows/: ci.yml
Formula/: starweft.rb
apps/starweft/: Cargo.toml
apps/starweft/src/: cli.rs  commands.rs  config.rs  decision.rs  helpers.rs  main.rs  ops.rs  project.rs  publish.rs  registry.rs  runtime.rs  status.rs  tui.rs  vision.rs  wait.rs  watch.rs
apps/starweft/tests/: libp2p_e2e.rs  relay_e2e.rs  windows_smoke.rs
apps/starweft/tests/common/: mod.rs
crates/starweft-crypto/: Cargo.toml
crates/starweft-crypto/src/: lib.rs
crates/starweft-id/: Cargo.toml
crates/starweft-id/src/: lib.rs
crates/starweft-observation/: Cargo.toml
crates/starweft-observation/src/: lib.rs
crates/starweft-openclaw-bridge/: Cargo.toml
crates/starweft-openclaw-bridge/src/: lib.rs
crates/starweft-p2p/: Cargo.toml
crates/starweft-p2p/src/: lib.rs
crates/starweft-protocol/: Cargo.toml
crates/starweft-protocol/src/: lib.rs
crates/starweft-runtime/: Cargo.toml
crates/starweft-runtime/src/: lib.rs
crates/starweft-stop/: Cargo.toml
crates/starweft-stop/src/: lib.rs
crates/starweft-store/: Cargo.toml
crates/starweft-store/benches/: store_bench.rs
crates/starweft-store/src/: lib.rs
deploy/systemd/: README.md  starweft-metrics@.service  starweft-metrics@.timer  starweft-owner.service  starweft-principal.service  starweft-relay.service  starweft-worker.service
docs/runbooks/: backup-restore.md  operations.md  topology.md
docs/security/: operations.md
npm/: install.js  package.json
scripts/: bootstrap-node.sh  install.sh
tasks/: todo.md
