[package]
name = "starweft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc = "3.4.5"
dirs.workspace = true
multiaddr.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
starweft-crypto = { path = "../../crates/starweft-crypto" }
starweft-id = { path = "../../crates/starweft-id" }
starweft-p2p = { path = "../../crates/starweft-p2p" }
starweft-protocol = { path = "../../crates/starweft-protocol" }
starweft-runtime = { path = "../../crates/starweft-runtime" }
starweft-store = { path = "../../crates/starweft-store" }
starweft-openclaw-bridge = { path = "../../crates/starweft-openclaw-bridge" }

[dev-dependencies]
tempfile = "3.18.0"
