[package]
name = "starweft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI application for the starweft multi-agent coordination platform"
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
clap_complete = "4.5"
ctrlc = "3.4.5"
dirs.workspace = true
hmac.workspace = true
multiaddr.workspace = true
rand_core.workspace = true
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
starweft-crypto = { path = "../../crates/starweft-crypto" }
starweft-id = { path = "../../crates/starweft-id" }
starweft-p2p = { path = "../../crates/starweft-p2p" }
starweft-protocol = { path = "../../crates/starweft-protocol" }
starweft-runtime = { path = "../../crates/starweft-runtime" }
starweft-store = { path = "../../crates/starweft-store" }
starweft-openclaw-bridge = { path = "../../crates/starweft-openclaw-bridge" }
starweft-observation = { path = "../../crates/starweft-observation" }
starweft-stop = { path = "../../crates/starweft-stop" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = "3.18.0"
