[package]
name = "starweft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI application for the starweft multi-agent coordination platform"
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
clap_complete = "4.5"
crossterm = "0.29"
ctrlc = "3.4.5"
dirs.workspace = true
hmac.workspace = true
multiaddr.workspace = true
ratatui = "0.30"
rand_core.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width = "0.2.2"
starweft-crypto = { path = "../../crates/starweft-crypto", version = "0.5.0" }
starweft-id = { path = "../../crates/starweft-id", version = "0.5.0" }
starweft-p2p = { path = "../../crates/starweft-p2p", version = "0.5.0" }
starweft-protocol = { path = "../../crates/starweft-protocol", version = "0.5.0" }
starweft-runtime = { path = "../../crates/starweft-runtime", version = "0.5.0" }
starweft-store = { path = "../../crates/starweft-store", version = "0.5.0" }
starweft-openclaw-bridge = { path = "../../crates/starweft-openclaw-bridge", version = "0.5.0" }
starweft-observation = { path = "../../crates/starweft-observation", version = "0.5.0" }
starweft-stop = { path = "../../crates/starweft-stop", version = "0.5.0" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Storage_FileSystem",
] }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/starweft-v{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dev-dependencies]
tempfile = "3.18.0"
