[package]
name = "starweft-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cryptographic primitives and key management for starweft"
repository.workspace = true
homepage.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
starweft-id = { path = "../starweft-id", version = "0.4.0" }
zeroize.workspace = true
