[package]
name = "starweft-observation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Observation and monitoring primitives for starweft agents"
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
starweft-id = { path = "../starweft-id", version = "0.5.0" }
starweft-protocol = { path = "../starweft-protocol", version = "0.5.0" }
time.workspace = true
