[package]
name = "starweft-openclaw-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
wait-timeout = "0.2.0"
starweft-protocol = { path = "../starweft-protocol" }
