[package]
name = "starweft-openclaw-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bridge integration between starweft and OpenClaw contract engine"
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
wait-timeout = "0.2.0"
starweft-protocol = { path = "../starweft-protocol", version = "0.4.0" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.171"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3.18.0"
