[package]
name = "starweft-p2p"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Peer-to-peer networking layer for starweft using libp2p"
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
libp2p = { version = "0.56.0", features = ["cbor", "macros", "mdns", "noise", "request-response", "tcp", "tokio", "yamux"] }
multiaddr.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.44.1", features = ["macros", "rt", "sync", "time"] }
tracing.workspace = true
starweft-protocol = { path = "../starweft-protocol", version = "0.3.0" }
