[package]
name = "starweft-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
starweft-crypto = { path = "../starweft-crypto" }
starweft-id = { path = "../starweft-id" }
