[package]
name = "starweft-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core protocol definitions and message types for starweft"
repository.workspace = true
homepage.workspace = true

[dependencies]
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
starweft-crypto = { path = "../starweft-crypto", version = "0.4.0" }
starweft-id = { path = "../starweft-id", version = "0.4.0" }
