[package]
name = "starweft-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Task execution runtime and agent lifecycle management for starweft"
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
starweft-crypto = { path = "../starweft-crypto" }
starweft-id = { path = "../starweft-id" }
starweft-protocol = { path = "../starweft-protocol" }
starweft-store = { path = "../starweft-store" }
