[package]
name = "starweft-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Task execution runtime and agent lifecycle management for starweft"
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
starweft-crypto = { path = "../starweft-crypto", version = "0.1.0" }
starweft-id = { path = "../starweft-id", version = "0.1.0" }
starweft-protocol = { path = "../starweft-protocol", version = "0.1.0" }
starweft-store = { path = "../starweft-store", version = "0.1.0" }
