[package]
name = "starweft-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQLite-backed persistent storage layer for starweft"
repository.workspace = true
homepage.workspace = true

[[bench]]
name = "store_bench"
harness = false

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
starweft-crypto = { path = "../starweft-crypto", version = "0.3.0" }
starweft-id = { path = "../starweft-id", version = "0.3.0" }
starweft-protocol = { path = "../starweft-protocol", version = "0.3.0" }
starweft-stop = { path = "../starweft-stop", version = "0.3.0" }
